[gd_scene load_steps=5 format=3 uid="uid://cjj4cmpnpybgg"]

[ext_resource type="Theme" uid="uid://nj7qlgpw5hed" path="res://my_app_theme.tres" id="1_1mwck"]
[ext_resource type="PackedScene" uid="uid://c7y47pljsmjy4" path="res://search_panel.tscn" id="1_ianf1"]
[ext_resource type="Script" uid="uid://b8gnqv2u1vrfa" path="res://txt/main.gd" id="2_1mwck"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ianf1"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_1mwck")
script = ExtResource("2_1mwck")

[node name="MainVBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuAndBody" type="VBoxContainer" parent="MainVBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="MenuBar" type="MenuBar" parent="MainVBox/MenuAndBody"]
unique_name_in_owner = true
layout_mode = 2

[node name="FileMenu" type="MenuButton" parent="MainVBox/MenuAndBody/MenuBar"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 31.0
text = "文件"

[node name="PopupMenu" type="PopupMenu" parent="MainVBox/MenuAndBody/MenuBar/FileMenu"]
oversampling_override = 1.0
visible = true

[node name="ViewMenu" type="MenuButton" parent="MainVBox/MenuAndBody/MenuBar"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 40.0
offset_right = 80.000046
offset_bottom = 31.0
text = "视图"

[node name="PopupMenu" type="PopupMenu" parent="MainVBox/MenuAndBody/MenuBar/ViewMenu"]
oversampling_override = 1.0
position = Vector2i(100, 0)
visible = true

[node name="SettingsMenu" type="MenuButton" parent="MainVBox/MenuAndBody/MenuBar"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 80.0
offset_right = 120.0
offset_bottom = 31.0
text = "设置"

[node name="MarginContainer" type="MarginContainer" parent="MainVBox/MenuAndBody"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HSplitContainer" type="HSplitContainer" parent="MainVBox/MenuAndBody/MarginContainer"]
layout_mode = 2
split_offset = -420

[node name="DirectoryPanel" type="ScrollContainer" parent="MainVBox/MenuAndBody/MarginContainer/HSplitContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="DirectoryContainer" type="VBoxContainer" parent="MainVBox/MenuAndBody/MarginContainer/HSplitContainer/DirectoryPanel"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextEdit" type="TextEdit" parent="MainVBox/MenuAndBody/MarginContainer/HSplitContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/caret_color = Color(0, 0, 0, 1)
theme_override_colors/selection_color = Color(0.31422657, 0.52979934, 0.6517362, 1)
wrap_mode = 1

[node name="StatusBar" type="HBoxContainer" parent="MainVBox"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="LeftStats" type="HBoxContainer" parent="MainVBox/StatusBar"]
layout_mode = 2

[node name="LabelCursorPos" type="Label" parent="MainVBox/StatusBar/LeftStats"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "行号/列号"
text = "Ln 1, Col 1"

[node name="VSeparator" type="VSeparator" parent="MainVBox/StatusBar/LeftStats"]
layout_mode = 2

[node name="LabelSelectionStats" type="Label" parent="MainVBox/StatusBar/LeftStats"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "选中显示字数"

[node name="LabelSpacer" type="Label" parent="MainVBox/StatusBar"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "用于分隔的 Label"

[node name="RightStats" type="HBoxContainer" parent="MainVBox/StatusBar"]
layout_mode = 2

[node name="LabelDocStats" type="Label" parent="MainVBox/StatusBar/RightStats"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "字数/行数"
text = "字数: 0 | 行数: 0"
horizontal_alignment = 2

[node name="SearchPanel" parent="." instance=ExtResource("1_ianf1")]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.0
offset_left = -164.0
offset_right = 164.0
offset_bottom = 93.0
grow_vertical = 1

[node name="FileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
oversampling_override = 1.0
title = "Open a File"
position = Vector2i(120, 62)
size = Vector2i(496, 320)
file_mode = 0
access = 2
filters = PackedStringArray("*.txt ; Text Files", "* ; All Files")

[node name="SaveDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
oversampling_override = 1.0
title = "另存为"
position = Vector2i(120, 62)
size = Vector2i(496, 320)
access = 2
filters = PackedStringArray("*.txt ; Text Files")

[node name="WarningLabel" type="Label" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 183.0
offset_top = 568.0
offset_right = 327.0
offset_bottom = 591.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_ianf1")
text = "警告信息在这里显示"
